[tool.poetry]
name = "recgov"
version = "0.1.0"
description = "Tool for interacting with recreation.gov"
authors = ["David Tillery <djtillery@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
click = "^8.1.7"
python-dotenv = "^1.0.1"
tqdm = "^4.66.2"
sqlmodel = "^0.0.16"
platformdirs = "^4.2.0"
aenum = "^3.1.15"

[tool.poetry.scripts]
recgov = "recgov.cli:cli"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
types-requests = "^2.31.0.20240406"
black = "^24.3.0"
isort = "^5.13.2"
pre-commit = "^3.7.0"
types-tqdm = "^4.66.0.20240106"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
