[project]
name = "recyoself"
version = "0.4.1"
description = "Tool for interacting with recreation.gov"
readme = "README.md"
authors = [
    {name = "David Tillery", email = "djtillery@gmail.com"},
]
requires-python = ">=3.12, <4.0"
dependencies = [
    "requests >=2.31.0, <3.0.0",
    "click >=8.1.7, <9.0.0",
    "tqdm >=4.66.2, <5.0.0",
    "sqlmodel >=0.0.22, <1.0.0",
    "platformdirs >=4.2.0, <5.0.0",
    "questionary >=2.0.1, <3.0.0",
    "rich-click >=1.8.5, <2.0.0",
]

[project.scripts]
recyoself = "recyoself.cli:cli"

[dependency-groups]
dev = [
    "mypy >=1.9.0, <2.0.0",
    "types-requests >=2.31.0.20240406, <3.0.0.0",
    "types-tqdm >=4.66.0.20240106, <5.0.0.0",
    "pre-commit >=4.0.1, <5.0.0",
    "black>=25.1.0",
    "isort>=6.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
